tecer-commit cambio-importacion-fuentes

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Desafio: DWF-N2 Componentes</title>
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="contact-form/styles.css" />
-    <script src="contact-form/index.js"></script>
-
     <link rel="stylesheet" href="./styles.css" />
-    <script defer src="./index.js"></script>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet" />
   </head>
 
   <body>
@@ -19,5 +23,9 @@
     </section>
 
     <section class="contact-section"></section>
+
+    <!-- Scripts -->
+    <script src="contact-form/index.js"></script>
+    <script defer src="./index.js"></script>
   </body>
 </html>
